[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ashareagents"
version = "1.0.0"
description = "AShareAgents 是一个面向中国 A 股市场的多 Agent 智能投研操作系统。"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "simonlin1212", email = "simonlin1212@users.noreply.github.com" },
]
dependencies = [
    "langchain-core>=0.3.81",
    "backtrader>=1.9.78.123",
    "langchain-anthropic>=0.3.15",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.23",
    "langgraph>=0.4.8",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "pandas>=2.3.0",
    "parsel>=1.10.0",
    "pytz>=2025.2",
    "questionary>=2.1.0",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "typer>=0.21.0",
    "setuptools>=80.9.0",
    "stockstats>=0.6.5",
    "tqdm>=4.67.1",
    "typing-extensions>=4.14.0",
    "yfinance>=0.2.63",
    "streamlit>=1.45.0",
    "fpdf2>=2.8.0",
    "python-dotenv>=1.1.0",
    "mootdx>=0.10.0",
    "langchain-text-splitters>=1.0.0",
    "pymilvus>=2.5.0,<3.0.0",
    "sentence-transformers>=3.4.0,<6.0.0",
    "torchvision>=0.27.0,<0.28.0",
    "rank-bm25>=0.2.2",
]

[project.urls]
Homepage = "https://github.com/EPxiaoma/AShareAgents"
Repository = "https://github.com/EPxiaoma/AShareAgents"

[project.optional-dependencies]
google = ["langchain-google-genai>=4.0.0"]

[project.scripts]
ashareagents-web = "frontend.launch:main"

[tool.setuptools.packages.find]
include = ["AShareAgents*", "frontend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "unit: fast isolated unit tests",
    "integration: tests requiring external services",
    "smoke: quick sanity-check tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
